--- a/public/css/app.css
+++ b/public/css/app.css
@@ -889,6 +889,10 @@ select {
 .border-transparent {
   border-color: transparent;
 }
+.border-rose-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(244 63 94 / var(--tw-border-opacity));
+}
 .border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
